# Computer_Graphics

./: CMakeLists.txt  README.md  line.cpp
homework_1/: line.cpp
homework_2/: Cyrus_Beck_algorithm.cpp
homework_3/: sobel_filter.py
homework_4/: bezier_curve.py  position.py
homework_5/: filling_convex.cpp
homework_5_js/: filling_convex.html
homework_6/: bezier_rotating.cpp
homework_7/: figure.cpp
